Updates the course about page CSS (#1865)
Works better with feature flagged content.

--- a/frontend/public/scss/product-page/product-faculty-members.scss
+++ b/frontend/public/scss/product-page/product-faculty-members.scss
@@ -1,72 +1,5 @@
 // sass-lint:disable mixins-before-declarations
-.faculty-section {
-  margin: 0 0 35px;
-
-  h2 {
-    margin: 0 0 35px;
-
-    @include media-breakpoint-down(sm) {
-      margin: 0 0 27px;
-    }
-  }
-}
-
-.faculty-members {
-  li {
-    @include media-breakpoint-down(md) {
-      width: calc(100% - 44px);
-    }
-
-    width: calc(50% - 44px);
-    margin: 0 22px 24px;
-
-    .member-card {
-      padding: 24px;
-      overflow: hidden;
-      border-radius: 4px !important;
-      box-shadow: 0 1px 0 0 rgb(0 0 0 / 12%);
-
-      .member-info {
-        overflow: hidden;
-        margin-top: 7px;
-
-        @include media-breakpoint-down(md) {
-          margin-top: 20px;
-        }
-
-        p {
-          font-size: 14px;
-        }
-
-        .description {
-          p {
-            margin: 0;
-            color: $label-subtitle;
-          }
-        }
-      }
-
-      &:hover {
-        h3 {
-          color: $brand-button-bg;
-        }
-      }
-    }
-
-    img {
-      float: left;
-      height: 110px;
-      width: 110px;
-      border-radius: 5px;
-      object-fit: cover;
-      object-position: 50% 0;
-      margin-right: 24px;
-
-      @include media-breakpoint-down(sm) {
-        display: block;
-        float: none;
-        margin: 0 auto 10px;
-      }
-    }
-  }
+body.new-design .faculty-members img {
+  border-radius: 5px;
+  object-position: 50% 0;
 }
