--- a/frontend/public/scss/layout.scss
+++ b/frontend/public/scss/layout.scss
@@ -31,8 +31,10 @@
 @import "home-page/featured-product-cards";
 @import "home-page/home-page-hero";
 @import "home-page/home-page-video-component";
+@import "product-page/user-menu";
+@import "product-page/product-details";
+@import "product-page/product-faculty-members";
 @import "home-page/home-page-contact-row";
-
 
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
