--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -147,8 +147,7 @@ body.new-design {
         display: flex;
         flex-flow: column;
         align-items: top;
-
-        margin-top: 10px;
+        margin: 10px 12px;
         width: 350px;
 
         @include media-breakpoint-up(xl) {
@@ -190,8 +189,12 @@ body.new-design {
           }
 
           .enrollment-info-icon {
-            width: 20px;
+            max-width: 20px;
             margin-right: 12px;
+            
+            img {
+              max-width: 20px;
+            }
           }
 
           .enrollment-info-text {
