--- a/frontend/public/scss/variables.scss
+++ b/frontend/public/scss/variables.scss
@@ -35,6 +35,7 @@ $events-background: #e3e3e3;
 
 $footer-bg: #000000;
 $footer-border: #686461;
+$footer-blue-bg: #03152D;
 
 $dc-background: #f2f2f2;
 $subtitle-color: #ff4a68;
