--- a/frontend/public/scss/footer.scss
+++ b/frontend/public/scss/footer.scss
@@ -1,5 +1,149 @@
 // sass-lint:disable mixins-before-declarations
 
+.new-footer {
+  border-top: 2px solid $brand-darker-bg;
+  background: $footer-blue-bg;
+  color: #FFF;
+  font-size: 13px;
+  white-space: normal;
+  display: flex;
+  justify-content: center;
+  margin-top: 10%;
+
+  .new-footer-container {
+    display:flex;
+
+    @include media-breakpoint-down(md) {
+       flex-direction: column-reverse;
+       padding-left: 5px;
+    }
+  }
+
+  .copyright-container {
+       padding: 40px 0 40px 40px;
+       width:47%;
+       flex-wrap: wrap;
+       flex-direction: row-reverse;
+       padding-left: 98px;
+
+      @include media-breakpoint-down(sm) {
+         margin-top: 0;
+         padding-left: 12px;
+         width:100%;
+         padding-top: 0;
+         display: inline-flex;
+         flex-direction: column;
+        }
+
+      @media (min-width: 768px) {
+        padding-left:70px
+      }
+
+
+      .copyright-col{
+        margin-left: 100px;
+        @include media-breakpoint-down(sm) {
+          margin-left: 0
+        }
+      }
+
+      .address-col>address, .copyright-col{
+        opacity: 0.6;
+      }
+      .address-col, .copyright-col {
+        display:inline-flex;
+      }
+
+      .address-col>img {
+          width: 85px;
+          height: 45px;
+          flex-shrink: 0;
+          margin-top: 5px;
+          margin-right: 15px;
+      }
+  }
+
+  .help-contact-container{
+    width:55%;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    opacity: 0.6;
+
+    @media (min-width: 1024px) {
+      width: auto;
+    }
+
+    @include media-breakpoint-down(sm) {
+      padding-left: 12px;
+      width:100%;
+      .links > li {
+        width: calc(100% / 3);
+        padding: 5px 0;
+      }
+    }
+
+    .help-contact-row {
+         display: flex;
+         flex-direction: row;
+
+        @include media-breakpoint-down(md) {
+           flex-direction: column;
+        }
+     }
+
+    .help-col, .contact-col {
+       display: inline-flex;
+       margin-right: 30px;
+       @include media-breakpoint-down(md) {
+          margin-right: 0
+       }
+    }
+
+    .info {
+      margin-left: 15px;
+    }
+    .info>a {
+      font-size:16px;
+      text-decoration: none;
+    }
+
+    img {
+      width: 35px;
+      height: 35px;
+      padding: 0.484px 0 1.453px 0;
+      flex-shrink: 0;
+      margin-top: 5px;
+    }
+
+    a {
+       color:  #FFF;
+       text-decoration: none;
+    }
+
+    .links {
+          display: inline-flex;
+          gap: 30px;
+          width: 100%;
+          list-style: none;
+          padding: 0;
+          flex-wrap: wrap;
+          margin-top: 30px;
+
+          @media (max-width: 1024px) {
+            gap: 10px;
+         }
+         @include media-breakpoint-down(sm) {
+           gap: 0;
+           width: auto;
+         }
+      }
+
+  }
+
+}
+
+
+//old footer
 .footer {
 
   background: $footer-bg;
