final pass for just font changes

--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -46,7 +46,7 @@
     <div class="featured-product-section carousel slide" id="featuredProductCarousel">
       <div class="featured-product-header">
         {% if product_cards_section_title %}
-          <div class="featured-product-header-title">{{ product_cards_section_title }}</div>
+          <h3 class="featured-product-header-title">{{ product_cards_section_title }}</h3>
         {% endif %}
         <div class="featured-product-arrows">
           <a href="#featuredProductCarousel" role="button" data-bs-slide="prev">
