--- a/frontend/public/scss/home-page/home-page-hero.scss
+++ b/frontend/public/scss/home-page/home-page-hero.scss
@@ -13,6 +13,18 @@ body.new-design {
     width: 100%;
     height: 294px;
   }
+  h1, h2, h3, h4, h5, h6 {
+    font-family: Poppins, sans-serif;
+    font-style: normal;
+    line-height: normal;
+    font-weight: 700;
+  }
+  p, a {
+    font-family: Inter, sans-serif;
+    font-style: normal;
+    line-height: normal;
+    font-weight: 400;
+  }
 
   .home-page-hero {
     max-width: 1440px;
@@ -93,10 +105,6 @@ body.new-design {
         h1 {
           color: #FFF;
           font-size: 65px;
-          font-style: normal;
-          font-family: Poppins, sans-serif;
-          font-weight: 700;
-          line-height: normal;
           margin-bottom: .8rem;
           @include media-breakpoint-down(xl) {
             font-size: 50px;
@@ -110,10 +118,8 @@ body.new-design {
         h2 {
           color: $home-page-subheader-light-blue;
           font-size: 24px;
-          font-style: normal;
           font-family: Poppins, sans-serif;
           font-weight: 400;
-          line-height: normal;
           text-transform: uppercase;
           margin-bottom: 3.5rem;
           @include media-breakpoint-down(md) {
@@ -126,9 +132,6 @@ body.new-design {
         p {
           color: #FFF;
           font-size: 16px;
-          font-style: normal;
-          font-family: Inter, sans-serif;
-          font-weight: 400;
           line-height: 25px;
           margin-bottom: 3.31rem;
           @include media-breakpoint-down(md) {
@@ -136,7 +139,6 @@ body.new-design {
           }
         }
       }
-
       .hero-button-container {
         padding-bottom: 93px;
         display: flex;
@@ -147,7 +149,6 @@ body.new-design {
           justify-content: center;
           padding-bottom: 25px;
         }
-
         .hero-explore-button {
           display: inline-flex;
           padding: 20px 40px;
@@ -158,11 +159,8 @@ body.new-design {
           background: $brand-darker-bg;
           color: #FFF;
           text-align: center;
-          font-family: Inter, sans-serif;
           font-size: 20px;
-          font-style: normal;
           font-weight: 700;
-          line-height: normal;
           border: none;
           text-decoration: none;
           @include media-breakpoint-down(sm) {
