--- a/frontend/public/scss/home-page/home-page-video-component.scss
+++ b/frontend/public/scss/home-page/home-page-video-component.scss
@@ -4,8 +4,6 @@
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: center;
-  align-content: center;
 
   h1, h2, h3, h4, h5, h6 {
     font-family: Poppins, sans-serif;
@@ -24,10 +22,10 @@
   .home-page-video-container {
     margin-top: 60px;
     width: 100%;
-    max-width: 1440px;
+    max-width: 1320px;
     flex-shrink: 0;
     display: flex;
-    padding: 0 40px 0 40px;
+    padding: 0;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
@@ -75,7 +73,7 @@
     }
 
     .home-page-video-wrapper {
-      padding: 0 1.579% 0 0;
+      padding: 0;
       .home-page-video-player {
         width: 100%;
         max-width: 100%;
