--- a/frontend/public/scss/catalog.scss
+++ b/frontend/public/scss/catalog.scss
@@ -178,11 +178,19 @@
             margin-top: 15px;
             padding-left: 0;
             padding-right: 0;
+            display: grid;
+            grid-template-columns: 1fr;
 
             .catalog-count-animation {
 
+                #count-animation-grid {
+                    display: grid;
+                    grid-template-columns: 1fr;
+                }
                 /* starting ENTER animation */
                 .count-enter {
+                    grid-row-start: 1;
+                    grid-column-start: 1;
                     opacity: 0;
                 }
                 
@@ -194,6 +202,8 @@
                 
                 /* starting EXIT animation */
                 .count-exit {
+                    grid-row-start: 1;
+                    grid-column-start: 1;
                     opacity: 1;
                 }
         
